// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`commands/env > env:clone should exit if the folder is not linked to a site, and --from is not provided 1`] = `"Please include the source site Id as the \`--from\` option, or run \`netlify link\` to link this folder to a Netlify site"`;

exports[`commands/env > env:clone should return success message 1`] = `"Successfully cloned environment variables from site-name to site-name-a"`;

exports[`commands/env > env:clone should return without clone if there's no env in source site 1`] = `"site-name has no environment variables, nothing to clone"`;

exports[`commands/env > env:list should hide variables values and prompt to show 1`] = `
"2 environment variables for site site-name  
.------------------------------------------------------------------.
|                      Environment variables                       |
|------------------------------------------------------------------|
|     Key     |                       Value                        |
|-------------|----------------------------------------------------|
| DB_ADMIN    | ************************************************** |
| DB_PASSWORD | ************************************************** |
'------------------------------------------------------------------'
? Show values? (y/N) [21D[21C[2K[G? Show values? No[17D[17C"
`;

exports[`commands/env > env:list should hide variables values and show on confirm 1`] = `
"2 environment variables for site site-name  
.------------------------------------------------------------------.
|                      Environment variables                       |
|------------------------------------------------------------------|
|     Key     |                       Value                        |
|-------------|----------------------------------------------------|
| DB_ADMIN    | ************************************************** |
| DB_PASSWORD | ************************************************** |
'------------------------------------------------------------------'
? Show values? (y/N) [21D[21C[2K[G? Show values? (y/N) y[22D[22C[2K[G? Show values? Yes[18D[18C
[2K[1A[2K[1A[2K[G
[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G.---------------------.
| Environment variables |
|---------------------|
|     Key     | Value |
|-------------|-------|
| DB_ADMIN    | admin |
| DB_PASSWORD | 1234  |
'---------------------'
? Show values? Yes"
`;

exports[`commands/env > env:list should not prompt on CI 1`] = `
"2 environment variables for site site-name  
.---------------------.
| Environment variables |
|---------------------|
|     Key     | Value |
|-------------|-------|
| DB_ADMIN    | admin |
| DB_PASSWORD | 1234  |
'---------------------'"
`;
